--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h4,h5{
 }
 .products{
     text-align: center;
-    padding: 50px;
+    padding: 22px;
 }
 .box:hover{
     background-color:black;
@@ -73,11 +73,11 @@ h4,h5{
 .contact{
     background-color: black;
     color: white;
-    margin-top:20px
+    margin-top:35px
     
 }
 .para{
-    padding-left: 100px; ;
+    padding-left: 100px; 
     padding-right: 100px;
 }
 .con{
